@@ -18,6 +18,9 @@ Revision history for Test-BrewBuild
         - added rpi_lcd_cols and rpi_lcd_rows directives to the config file for
           Dispatch; sets the LCD row and column count, and modified the display
           for 4x20 LCDs
+        - removed "--yes" from the perlbrew uninstall command. Newer versions
+          of Perlbrew don't seem to honour it
+        - slight test cleanup
 
 2.19    2017-08-05
         - added 'status' command to bbtester, prints to STDOUT whether a tester
